...
                title = {
                    Box(
                        modifier = Modifier.fillMaxWidth(),
                        contentAlignment = Alignment.Center
                    ) {
                        Text(
                            text = "My Schedules",
                            fontSize = 22.sp,
                            fontWeight = FontWeight.Medium,
                            color = Color.White
                        )
                    }
                },
...
