...
    }

    var body: some View {
        ScrollView {
            VStack(alignment: .leading, spacing: 20) {
                HStack {
                    Text("Schedule Name:").fontWeight(.medium)
                    Text(schedule.name).fontWeight(.bold)
                }

                if !schedule.shifts.isEmpty {
                    Text("Statistics").font(.headline)

...
